菜单框架v1.0完成

--- a/Projects/TheMenu/.vscode/settings.json
+++ b/Projects/TheMenu/.vscode/settings.json
@@ -4,6 +4,8 @@
         "stdio.h": "c",
         "typeinfo": "c",
         "atomic": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "string.h": "c",
+        "stdlib.h": "c"
     }
 }
