--- a/Projects/SmartEsp8266/Smart/bulid/sketch/bulid/sketch/.vscode/settings.json
+++ b/Projects/SmartEsp8266/Smart/bulid/sketch/bulid/sketch/.vscode/settings.json
@@ -1,3 +1,5 @@
+#line 1 "D:\\Git\\CodeLearning\\Projects\\SmartEsp8266\\Smart\\bulid\\sketch\\.vscode\\settings.json"
+#line 1 "D:\\Git\\CodeLearning\\Projects\\SmartEsp8266\\Smart\\.vscode\\settings.json"
 {
     "files.associations": {
         "*.tcc": "cpp",
